add_library( opgen-terraneo

   P1ElementwiseShearHeating.cpp
   P1ElementwiseShearHeating.hpp
   P1ElementwiseShearHeatingIcosahedralShellMap.cpp
   P1ElementwiseShearHeatingIcosahedralShellMap.hpp
   P2ElementwiseShearHeating.cpp
   P2ElementwiseShearHeating.hpp
   P2ElementwiseShearHeatingAnnulusMap.cpp
   P2ElementwiseShearHeatingAnnulusMap.hpp
   P2ElementwiseShearHeatingIcosahedralShellMap.cpp
   P2ElementwiseShearHeatingIcosahedralShellMap.hpp
   P2ElementwiseShearHeatingP1Viscosity.cpp
   P2ElementwiseShearHeatingP1Viscosity.hpp
   P2ElementwiseShearHeatingP1ViscosityAnnulusMap.cpp
   P2ElementwiseShearHeatingP1ViscosityAnnulusMap.hpp
   P2ElementwiseShearHeatingP1ViscosityIcosahedralShellMap.cpp
   P2ElementwiseShearHeatingP1ViscosityIcosahedralShellMap.hpp
   P2ElementwiseShearHeatingP1ViscosityParametricP2Map.cpp
   P2ElementwiseShearHeatingP1ViscosityParametricP2Map.hpp
   P2VectorToP1ElementwiseFrozenVelocity.cpp
   P2VectorToP1ElementwiseFrozenVelocity.hpp
   P2VectorToP1ElementwiseFrozenVelocityAnnulusMap.cpp
   P2VectorToP1ElementwiseFrozenVelocityAnnulusMap.hpp
   P2VectorToP1ElementwiseFrozenVelocityIcosahedralShellMap.cpp
   P2VectorToP1ElementwiseFrozenVelocityIcosahedralShellMap.hpp
   P2VectorToP1ElementwiseFrozenVelocityP1Density.cpp
   P2VectorToP1ElementwiseFrozenVelocityP1Density.hpp
   P2VectorToP1ElementwiseFrozenVelocityP1DensityAnnulusMap.cpp
   P2VectorToP1ElementwiseFrozenVelocityP1DensityAnnulusMap.hpp
   P2VectorToP1ElementwiseFrozenVelocityP1DensityIcosahedralShellMap.cpp
   P2VectorToP1ElementwiseFrozenVelocityP1DensityIcosahedralShellMap.hpp
   P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map.cpp
   P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map.hpp
)
target_link_libraries( opgen-terraneo PRIVATE hyteg )

if(HYTEG_BUILD_WITH_AVX AND WALBERLA_DOUBLE_ACCURACY)
   target_sources(opgen-terraneo PRIVATE

      avx/P1ElementwiseShearHeatingIcosahedralShellMap_applyScaled_P1ElementwiseShearHeatingIcosahedralShellMap_macro_3D.cpp
      avx/P1ElementwiseShearHeatingIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseShearHeatingIcosahedralShellMap_macro_3D.cpp
      avx/P1ElementwiseShearHeating_applyScaled_P1ElementwiseShearHeating_macro_2D.cpp
      avx/P1ElementwiseShearHeating_applyScaled_P1ElementwiseShearHeating_macro_3D.cpp
      avx/P1ElementwiseShearHeating_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseShearHeating_macro_2D.cpp
      avx/P1ElementwiseShearHeating_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseShearHeating_macro_3D.cpp
      avx/P2ElementwiseShearHeatingAnnulusMap_applyScaled_P2ElementwiseShearHeatingAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseShearHeatingAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseShearHeatingIcosahedralShellMap_applyScaled_P2ElementwiseShearHeatingIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseShearHeatingIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityAnnulusMap_applyScaled_P2ElementwiseShearHeatingP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityIcosahedralShellMap_applyScaled_P2ElementwiseShearHeatingP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityParametricP2Map_applyScaled_P2ElementwiseShearHeatingP1ViscosityParametricP2Map_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityParametricP2Map_applyScaled_P2ElementwiseShearHeatingP1ViscosityParametricP2Map_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityParametricP2Map_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityParametricP2Map_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1Viscosity_applyScaled_P2ElementwiseShearHeatingP1Viscosity_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1Viscosity_applyScaled_P2ElementwiseShearHeatingP1Viscosity_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1Viscosity_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1Viscosity_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1Viscosity_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1Viscosity_macro_3D.cpp
      avx/P2ElementwiseShearHeating_applyScaled_P2ElementwiseShearHeating_macro_2D.cpp
      avx/P2ElementwiseShearHeating_applyScaled_P2ElementwiseShearHeating_macro_3D.cpp
      avx/P2ElementwiseShearHeating_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeating_macro_2D.cpp
      avx/P2ElementwiseShearHeating_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeating_macro_3D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocityAnnulusMap_applyScaled_P2VectorToP1ElementwiseFrozenVelocityAnnulusMap_macro_2D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocityIcosahedralShellMap_applyScaled_P2VectorToP1ElementwiseFrozenVelocityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocityP1DensityAnnulusMap_applyScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityAnnulusMap_macro_2D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocityP1DensityIcosahedralShellMap_applyScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_applyScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_macro_2D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_applyScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_macro_3D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocityP1Density_applyScaled_P2VectorToP1ElementwiseFrozenVelocityP1Density_macro_2D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocityP1Density_applyScaled_P2VectorToP1ElementwiseFrozenVelocityP1Density_macro_3D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocity_applyScaled_P2VectorToP1ElementwiseFrozenVelocity_macro_2D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocity_applyScaled_P2VectorToP1ElementwiseFrozenVelocity_macro_3D.cpp
      noarch/P1ElementwiseShearHeatingIcosahedralShellMap_toMatrixScaled_P1ElementwiseShearHeatingIcosahedralShellMap_macro_3D.cpp
      noarch/P1ElementwiseShearHeating_toMatrixScaled_P1ElementwiseShearHeating_macro_2D.cpp
      noarch/P1ElementwiseShearHeating_toMatrixScaled_P1ElementwiseShearHeating_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingAnnulusMap_toMatrixScaled_P2ElementwiseShearHeatingAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingIcosahedralShellMap_toMatrixScaled_P2ElementwiseShearHeatingIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityAnnulusMap_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityIcosahedralShellMap_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityParametricP2Map_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityParametricP2Map_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityParametricP2Map_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityParametricP2Map_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1Viscosity_toMatrixScaled_P2ElementwiseShearHeatingP1Viscosity_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1Viscosity_toMatrixScaled_P2ElementwiseShearHeatingP1Viscosity_macro_3D.cpp
      noarch/P2ElementwiseShearHeating_toMatrixScaled_P2ElementwiseShearHeating_macro_2D.cpp
      noarch/P2ElementwiseShearHeating_toMatrixScaled_P2ElementwiseShearHeating_macro_3D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityAnnulusMap_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocityAnnulusMap_macro_2D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityIcosahedralShellMap_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityP1DensityAnnulusMap_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityAnnulusMap_macro_2D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityP1DensityIcosahedralShellMap_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_macro_2D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_macro_3D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityP1Density_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocityP1Density_macro_2D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityP1Density_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocityP1Density_macro_3D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocity_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocity_macro_2D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocity_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocity_macro_3D.cpp
   )

   set_source_files_properties(

      avx/P1ElementwiseShearHeatingIcosahedralShellMap_applyScaled_P1ElementwiseShearHeatingIcosahedralShellMap_macro_3D.cpp
      avx/P1ElementwiseShearHeatingIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseShearHeatingIcosahedralShellMap_macro_3D.cpp
      avx/P1ElementwiseShearHeating_applyScaled_P1ElementwiseShearHeating_macro_2D.cpp
      avx/P1ElementwiseShearHeating_applyScaled_P1ElementwiseShearHeating_macro_3D.cpp
      avx/P1ElementwiseShearHeating_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseShearHeating_macro_2D.cpp
      avx/P1ElementwiseShearHeating_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseShearHeating_macro_3D.cpp
      avx/P2ElementwiseShearHeatingAnnulusMap_applyScaled_P2ElementwiseShearHeatingAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseShearHeatingAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseShearHeatingIcosahedralShellMap_applyScaled_P2ElementwiseShearHeatingIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseShearHeatingIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityAnnulusMap_applyScaled_P2ElementwiseShearHeatingP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityIcosahedralShellMap_applyScaled_P2ElementwiseShearHeatingP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityParametricP2Map_applyScaled_P2ElementwiseShearHeatingP1ViscosityParametricP2Map_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityParametricP2Map_applyScaled_P2ElementwiseShearHeatingP1ViscosityParametricP2Map_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityParametricP2Map_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityParametricP2Map_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1Viscosity_applyScaled_P2ElementwiseShearHeatingP1Viscosity_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1Viscosity_applyScaled_P2ElementwiseShearHeatingP1Viscosity_macro_3D.cpp
      avx/P2ElementwiseShearHeatingP1Viscosity_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1Viscosity_macro_2D.cpp
      avx/P2ElementwiseShearHeatingP1Viscosity_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1Viscosity_macro_3D.cpp
      avx/P2ElementwiseShearHeating_applyScaled_P2ElementwiseShearHeating_macro_2D.cpp
      avx/P2ElementwiseShearHeating_applyScaled_P2ElementwiseShearHeating_macro_3D.cpp
      avx/P2ElementwiseShearHeating_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeating_macro_2D.cpp
      avx/P2ElementwiseShearHeating_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeating_macro_3D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocityAnnulusMap_applyScaled_P2VectorToP1ElementwiseFrozenVelocityAnnulusMap_macro_2D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocityIcosahedralShellMap_applyScaled_P2VectorToP1ElementwiseFrozenVelocityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocityP1DensityAnnulusMap_applyScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityAnnulusMap_macro_2D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocityP1DensityIcosahedralShellMap_applyScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_applyScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_macro_2D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_applyScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_macro_3D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocityP1Density_applyScaled_P2VectorToP1ElementwiseFrozenVelocityP1Density_macro_2D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocityP1Density_applyScaled_P2VectorToP1ElementwiseFrozenVelocityP1Density_macro_3D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocity_applyScaled_P2VectorToP1ElementwiseFrozenVelocity_macro_2D.cpp
      avx/P2VectorToP1ElementwiseFrozenVelocity_applyScaled_P2VectorToP1ElementwiseFrozenVelocity_macro_3D.cpp

      PROPERTIES COMPILE_OPTIONS ${HYTEG_COMPILER_NATIVE_FLAGS}
   )
else()
   if(HYTEG_BUILD_WITH_AVX AND NOT WALBERLA_DOUBLE_ACCURACY)
      message(WARNING "AVX vectorization only available in double precision. Using scalar kernels.")
   endif()

   target_sources(opgen-terraneo PRIVATE

      noarch/P1ElementwiseShearHeatingIcosahedralShellMap_applyScaled_P1ElementwiseShearHeatingIcosahedralShellMap_macro_3D.cpp
      noarch/P1ElementwiseShearHeatingIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseShearHeatingIcosahedralShellMap_macro_3D.cpp
      noarch/P1ElementwiseShearHeatingIcosahedralShellMap_toMatrixScaled_P1ElementwiseShearHeatingIcosahedralShellMap_macro_3D.cpp
      noarch/P1ElementwiseShearHeating_applyScaled_P1ElementwiseShearHeating_macro_2D.cpp
      noarch/P1ElementwiseShearHeating_applyScaled_P1ElementwiseShearHeating_macro_3D.cpp
      noarch/P1ElementwiseShearHeating_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseShearHeating_macro_2D.cpp
      noarch/P1ElementwiseShearHeating_computeInverseDiagonalOperatorValuesScaled_P1ElementwiseShearHeating_macro_3D.cpp
      noarch/P1ElementwiseShearHeating_toMatrixScaled_P1ElementwiseShearHeating_macro_2D.cpp
      noarch/P1ElementwiseShearHeating_toMatrixScaled_P1ElementwiseShearHeating_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingAnnulusMap_applyScaled_P2ElementwiseShearHeatingAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingAnnulusMap_toMatrixScaled_P2ElementwiseShearHeatingAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingIcosahedralShellMap_applyScaled_P2ElementwiseShearHeatingIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingIcosahedralShellMap_toMatrixScaled_P2ElementwiseShearHeatingIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityAnnulusMap_applyScaled_P2ElementwiseShearHeatingP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityAnnulusMap_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityIcosahedralShellMap_applyScaled_P2ElementwiseShearHeatingP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityIcosahedralShellMap_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityParametricP2Map_applyScaled_P2ElementwiseShearHeatingP1ViscosityParametricP2Map_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityParametricP2Map_applyScaled_P2ElementwiseShearHeatingP1ViscosityParametricP2Map_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityParametricP2Map_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1ViscosityParametricP2Map_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityParametricP2Map_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityParametricP2Map_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1ViscosityParametricP2Map_toMatrixScaled_P2ElementwiseShearHeatingP1ViscosityParametricP2Map_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1Viscosity_applyScaled_P2ElementwiseShearHeatingP1Viscosity_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1Viscosity_applyScaled_P2ElementwiseShearHeatingP1Viscosity_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1Viscosity_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1Viscosity_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1Viscosity_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeatingP1Viscosity_macro_3D.cpp
      noarch/P2ElementwiseShearHeatingP1Viscosity_toMatrixScaled_P2ElementwiseShearHeatingP1Viscosity_macro_2D.cpp
      noarch/P2ElementwiseShearHeatingP1Viscosity_toMatrixScaled_P2ElementwiseShearHeatingP1Viscosity_macro_3D.cpp
      noarch/P2ElementwiseShearHeating_applyScaled_P2ElementwiseShearHeating_macro_2D.cpp
      noarch/P2ElementwiseShearHeating_applyScaled_P2ElementwiseShearHeating_macro_3D.cpp
      noarch/P2ElementwiseShearHeating_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeating_macro_2D.cpp
      noarch/P2ElementwiseShearHeating_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseShearHeating_macro_3D.cpp
      noarch/P2ElementwiseShearHeating_toMatrixScaled_P2ElementwiseShearHeating_macro_2D.cpp
      noarch/P2ElementwiseShearHeating_toMatrixScaled_P2ElementwiseShearHeating_macro_3D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityAnnulusMap_applyScaled_P2VectorToP1ElementwiseFrozenVelocityAnnulusMap_macro_2D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityAnnulusMap_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocityAnnulusMap_macro_2D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityIcosahedralShellMap_applyScaled_P2VectorToP1ElementwiseFrozenVelocityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityIcosahedralShellMap_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityP1DensityAnnulusMap_applyScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityAnnulusMap_macro_2D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityP1DensityAnnulusMap_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityAnnulusMap_macro_2D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityP1DensityIcosahedralShellMap_applyScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityP1DensityIcosahedralShellMap_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_applyScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_macro_2D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_applyScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_macro_3D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_macro_2D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocityP1DensityParametricP2Map_macro_3D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityP1Density_applyScaled_P2VectorToP1ElementwiseFrozenVelocityP1Density_macro_2D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityP1Density_applyScaled_P2VectorToP1ElementwiseFrozenVelocityP1Density_macro_3D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityP1Density_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocityP1Density_macro_2D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocityP1Density_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocityP1Density_macro_3D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocity_applyScaled_P2VectorToP1ElementwiseFrozenVelocity_macro_2D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocity_applyScaled_P2VectorToP1ElementwiseFrozenVelocity_macro_3D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocity_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocity_macro_2D.cpp
      noarch/P2VectorToP1ElementwiseFrozenVelocity_toMatrixScaled_P2VectorToP1ElementwiseFrozenVelocity_macro_3D.cpp
   )
endif()

if (HYTEG_BUILD_WITH_PETSC)
   target_link_libraries(opgen-terraneo PUBLIC PETSc::PETSc)
endif ()
if (WALBERLA_BUILD_WITH_HALF_PRECISION_SUPPORT)
    target_compile_features(opgen-terraneo PUBLIC cxx_std_23)
else ()
    target_compile_features(opgen-terraneo PUBLIC cxx_std_17)
endif ()
